Started the user route
