# server/api/controllers/user/router.ts
@@ -1,0 +1,4 @@
+import * as express from 'express';
+import controller from './controller'
+export default express.Router()
+    .get('/:preferredUsername', controller.getResource)
